# LoggerScorpio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  installdep.sh  premake5.lua  simpleinstall.sh
.github/workflows/: build.yml  logger.yml
LoggerScorpio/include/: ScorpioLog.hpp
LoggerScorpio/src/: Log.cpp  Log.h  Log.hpp  main.cpp
include/: ScorpioLog.hpp
scripts/: buildall.sh  ci_env_setup.sh  install.sh  installdep.sh
src/: SPDLogWrapper.cpp  SPDLogWrapper.hpp
